# aip

./: CLAUDE.md  Cargo.toml  README.md
src/: cli.rs  config.rs  dashboard.rs  display.rs  fs_util.rs  http.rs  main.rs  tool.rs
src/claude/: keychain.rs  mod.rs  profile.rs  usage.rs
src/codex/: profile.rs  usage.rs
