[package]
name = "aip-cli"
version = "0.8.5"
edition = "2024"
description = "AI profile manager for Claude Code and Codex CLI."
license = "MIT"
repository = "https://github.com/dqn/aip"
homepage = "https://github.com/dqn/aip"
documentation = "https://docs.rs/aip-cli"
readme = "README.md"
keywords = ["ai", "cli", "profile", "claude", "codex"]
categories = ["command-line-utilities"]

[[bin]]
name = "aip"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
console = "0.15"
dialoguer = "0.11"
dirs = "6"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
